--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
