--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.0",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12",
+    "vue-slick-carousel": "^1.0.6",
     "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
